# learn-axum

./: .env  Cargo.toml  LICENSE  README.md
src/: main.rs
src/db/: mod.rs
src/domain/: file.rs  mod.rs  payment.rs  payment_status.rs  sys_role.rs  sys_user.rs  user.rs
src/dto/: mod.rs  payment_dto.rs  user_dto.rs
src/handlers/: file_handler.rs  mod.rs  payment_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/repository/: file_repository.rs  mod.rs  sys_role_repository.rs  sys_user_repository.rs  user_repository.rs
src/routers/: file_router.rs  mod.rs  payment_router.rs  sys_role_router.rs  sys_user_router.rs  user_router.rs
src/test/: initdb.sql  test.http
static/css/: basic.css  index.css
static/templates/: index.html
test/: test.http
