[package]
name = "learn-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["multipart", "macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }
tera = "1.19.0"
tokio = { version = "1.29", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors", "auth", "tower", "timeout"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
